SECURITY_section/service_account_mounting_token.yaml
# You shouldn't have to copy and paste the token each time. The Dashboard application is programmed to read token from the secret mount location. 
# However currently, the default service account is mounted. Update the deployment to use the newly created ServiceAccount
# Edit the deployment to change ServiceAccount from default to dashboard-sa.

# COMMANDS:
# kubectl get deployment web-dashboard -o yaml > dashboard.yaml
# vi dashboard.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2024-12-05T14:20:04Z"
  generation: 1
  name: web-dashboard
  namespace: default
  resourceVersion: "777"
  uid: 8783a5e0-b50b-4452-ba69-0bb76a2937a7
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: web-dashboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: web-dashboard
    spec:
      serviceAccountName: dashboard-sa
      containers:
      - env:
        - name: PYTHONUNBUFFERED
          value: "1"
        image: gcr.io/kodekloud/customimage/my-kubernetes-dashboard
        imagePullPolicy: Always
        name: web-dashboard
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-12-05T14:20:08Z"
    lastUpdateTime: "2024-12-05T14:20:08Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-12-05T14:20:04Z"
    lastUpdateTime: "2024-12-05T14:20:08Z"
    message: ReplicaSet "web-dashboard-66d58fc7b8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
