SECURITY_section/network_security.yaml
# Requirement:
# Create a network policy to allow traffic from the Internal application only to the payroll-service and db-service.
# Use the spec given below. You might want to enable ingress traffic to the pod to test your rules in the UI.
# Also, ensure that you allow egress traffic to DNS ports TCP and UDP (port 53) to enable DNS resolution from the internal pod.

# Policy Name: internal-policy
# Policy Type: Egress
# Egress Allow: payroll
# Payroll Port: 8080
# Egress Allow: mysql
# MySQL Port: 3306

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress
  - Ingress
  ingress:
    - {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: mysql
    ports:
    - protocol: TCP
      port: 3306
  - to:
    - podSelector:
        matchLabels:
          name: payroll
    ports:
    - protocol: TCP
      port: 8080
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
